# jsonapi-sandbox

./: README.md
flask-jsonapi-app/: app.py  pyproject.toml
