[tool.poetry]
name = "flask-jsonapi-app"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <62975595+purple-lion@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.0.0"
Flask-REST-JSONAPI = "^0.31.2"
flask_sqlalchemy = "^2.5.1"
marshmallow_jsonapi = "^0.24.0"
flask-admin = "^1.5.8"
jsonapi_requests = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
